# GameDev

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/: main.h  project_begins.h
src/engine/: main.cpp  project_begins.cpp
